--- a/views/dashboard/cards/BasicInfoCard.jade
+++ b/views/dashboard/cards/BasicInfoCard.jade
@@ -1,13 +1,14 @@
 .card
     .item
-        .row
+        .header-row.row
             h5.col-xs-4 Basic Info
             .header-link.col-xs-8
                 if isEditable
                     a.btn.btn-primary#editUserProfileBtn(data-id=userProfile.id)
                         i.icon-pencil
+                    &nbsp;
                     a.btn.btn-default#fetchBasic
-                        si.si-small.si-colored.si-linkedin
+                        si.si-small.si-linkedin
         .user-profile
             .avatar
                 .shadow
@@ -28,7 +29,7 @@
             if isEditable
                 a.btn.btn-success.btn-xs#selectFileBtn Upload
                 a.btn.btn-default.btn-xs#fetchProfilePicture
-                    si.si-small.si-colored.si-linkedin
+                    si.si-small.si-linkedin
                 form#fileUploadForm(action=ApiUrlDelegate.userProfilePicture(user.id), method="post", enctype="multipart/form-data")
                     input#selectFile(type='file', name='profile', style='display: none')
                     input#selectFileSubmit(type='submit', style='display: none')
@@ -40,7 +41,7 @@
                 if isEditable
                     h5.col-xs-8 Skills/Keywords
                     a.btn.btn-default.btn-xs#fetchSkill
-                        si.si-small.si-colored.si-linkedin
+                        si.si-small.si-linkedin
                 else
                     h5.col-xs-12 Skills/Keywords
                     .clearer
