--- a/views/payment/payment.jade
+++ b/views/payment/payment.jade
@@ -150,9 +150,9 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
                         .form-group
                             input.btn.btn-primary.btn.btn-block(type='submit', value='CREATE ACCOUNT')
                     .form-group
-                        a.btn.btn-facebook.btn-block(href=PaymentUrls.facebookLogin()) Login with Facebook
+                        a.btn.btn-facebook.btn-block#facebookLink() Login with Facebook
                     .form-group
-                        a.btn.btn-linkedin.btn-block(href=PaymentUrls.linkedInLogin()) Login with LinkedIn
+                        a.btn.btn-linkedin.btn-block#linkedInLink() Login with LinkedIn
                     span.pull-right
                         a#login-link.register(href='javascript:void(0)') Login
                         a#register-link.login(href='javascript:void(0)') Register
@@ -161,6 +161,9 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
 script(src='/js/app/callFlow/payment.js')
 include ../footer
 script.
+    var Timezone = JSON.parse('!{JSON.stringify(Timezone)}');
+    var linkedInUrl = '!{PaymentUrls.linkedInLogin()}';
+    var facebookUrl = '!{PaymentUrls.facebookLogin()}';
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
