--- a/views/header.jade
+++ b/views/header.jade
@@ -69,7 +69,7 @@ div.masthead(role='banner')
                 div.masthead-control-field
                     div.field-action
                         a.btn.btn-primary.login(href=DashboardUrls.login()) Login
-                div.masthead-control-field.lang-control
+                //div.masthead-control-field.lang-control
                     div.field-boxedinfo
                         div.lang en
                         div.shadow
