Timezone and fetching params passed as cookie Dashboard content

--- a/views/dashboard/accountVerification.jade
+++ b/views/dashboard/accountVerification.jade
@@ -9,5 +9,5 @@ include  ../header
                             h4 Your email has been verified!
                     .row
                         .item
-                            a.btn.btn-primary(href=DashboardUrls.login()) Click here to login
+                            a.btn.btn-primary(href=AuthenticationUrls.login()) Click here to login
 include ../footer
