--- a/views/dashboard/register.jade
+++ b/views/dashboard/register.jade
@@ -52,10 +52,9 @@ include ../header
                                             input(type='hidden', name='invitation_code', value=code)
                                             input.btn-primary.btn.btn-block(value='Register', type='submit')
                                     a.btn-linkedin.btn#linkedInLink() Login with LinkedIn
-                                    a.btn.btn-link(href=DashboardUrls.login()) Login
+                                    a.btn.btn-link(href=AuthenticationUrls.login()) Login
             // /.content
 include ../footer
 script.
     var Timezone = JSON.parse('!{JSON.stringify(Timezone)}');
-    var linkedInUrl = '!{MemberRegistrationUrls.linkedInLogin()}';
 script(src='/js/app/expertRegistration/authenticate.js')
