--- a/views/500.jade
+++ b/views/500.jade
@@ -31,6 +31,6 @@ head
                                 | An error occurred
                         p
                             | If you followed a link to this page, the link is possibly outdated. You may visit the
-                            a(href='index.html') searchntalk homepage
+                            a(href='/') searchntalk homepage
                             | to find what you are looking for.
             // /.content
