--- a/views/dashboard/userSetting.jade
+++ b/views/dashboard/userSetting.jade
@@ -15,20 +15,20 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                             .visible-xs.navbar-brand.network-brand Profile
                         #networks-collapse.collapse.navbar-collapse
                             ul.nav.nav-pills.nav-stacked
-                                li.active(name='phoneDetailsLink')
+                                li(name='phoneDetailsLink', class=selectedTab == 'phone' || !selectedTab ? 'active' : '')
                                     a Phone Details
-                                li(name='scheduleAndPricingLink')
+                                li(name='scheduleAndPricingLink', class=selectedTab == 'schedule' ? 'active' : '')
                                     a Schedules and Pricing
-                                li(name='changePasswordLink')
+                                li(name='changePasswordLink', class=selectedTab == 'password' ? 'active' : '')
                                     a Change Password
-                                li(name='widgetLink')
+                                li(name='widgetLink', class=selectedTab == 'widget' ? 'active' : '')
                                     a Widget
             //
                /.content
             .content.col-md-8
                 include userSchedule
                 .row
-                    .card#phoneDetails
+                    .card#phone
                         .item
                             .header-row.row
                                 h5.col-xs-8 Phone details
@@ -83,7 +83,7 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                                             div.links-editing
                                                 p.edit-schedules
                                                     input.btn.btn-primary(type='submit', value='Verify', name='verify')
-                    .card#changePasswordCard(style='display: none;')
+                    .card#password(style='display: none;')
                         form#changePasswordForm
                             .item-edit
                                 .item
@@ -107,7 +107,7 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                                             div.links-editing
                                                 p.edit-schedules
                                                     input.btn.btn-primary(type='submit', value='Change', name='changePassword')
-                    .card#widgetCard(style='display: none;')
+                    .card#widget(style='display: none;')
                         .item
                             .header-row.row
                                 h5.col-xs-8 Your Widgets
@@ -131,4 +131,5 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                                                 textarea(readonly, rows='6', cols='22') <iframe src=#{ApiUrlDelegate.publicWidget(widget.id,Config.get(Config.DASHBOARD_URI))} width="160" height="392" style="border: none;"></iframe>
 script.
     var user = JSON.parse( '!{JSON.stringify(loggedInUser)}' );
+    var selectedTab = '!{selectedTab || "phone"}';
 script(src='/js/app/dashboard/userSetting.js')
