Header logo link

--- a/views/header.jade
+++ b/views/header.jade
@@ -36,8 +36,8 @@ head
 div.masthead(role='banner')
     div.container
         div.masthead-brand
-            a.logo.hidden-xs(href='#')
-            a.icon.visible-xs(href='#')
+            a.logo.hidden-xs(href='/')
+            a.icon.visible-xs(href='/')
         div.masthead-controls
             if loggedInUser
                 .masthead-control-field.user-control
